# PyTide6

./: README.md  pyproject.toml
src/pytide6/: __init__.py  buttons.py  check_box.py  combo_box.py  dialogs.py  geometry.py  inputs.py  labels.py  layout.py  open_file_protocol.py  palette.py  panel_widget.py  recenetly_opened_files.py  widget_wrapper.py  windows.py
